--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <div class="card">
               <img src="img/Projects/3.jpg" class="card-img-top" alt="Project3" />
               <div class="card-body">
-                <p class="card-text">pemain bola handal</p>
+                <p class="card-text"></p>
               </div>
             </div>
           </div>
