--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <!-- My CSS -->
     <link rel="stylesheet" href="style.css" />
 
-    <title>My Portfolio | Farras Pandu Nugroho</title>
+    <title>My Portfolio | Muhammad Rizvi</title>
   </head>
 
   <body id="home">
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark shadow-sm fixed-top bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-dark shadow-sm fixed-top bg-warning">
       <div class="container">
-        <a class="navbar-brand" href="#">Farras Pandu Nugroho</a>
+        <a class="navbar-brand" href="#">Muhammad Rizvi</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -39,9 +39,9 @@
 
     <!-- Jumbotron -->
     <section class="jumbotron text-center">
-      <img src="img/pandu.jpg" alt="" width="150" class="rounded-circle shadow-sm img-fluid img-thumbnail" />
-      <h1 class="display-4">Farras Pandu Nugroho</h1>
-      <p class="lead">Mahasiswa | Biasa</p>
+      <img src="img/rizvi.jpg" alt="" width="150" class="rounded-circle shadow-sm img-fluid img-thumbnail" />
+      <h1 class="display-4">Muhammad Rizvi</h1>
+      <p class="lead">Mahasiswa | Pria</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#fff"
@@ -61,14 +61,14 @@
           </div>
         </div>
         <div class="row justify-content-center fs-5 text-center">
-          <div class="col-md-4"><p>Terimakasih kepada teman-teman yang sudah mau menyempatkan waktu untuk mampir ke website saya</p></div>
+          <div class="col-md-4"><p>Saya rizvi berterimakasih kepada teman-teman yang sudah mau menyempatkan waktu untuk mampir ke website saya</p></div>
           <div class="col-md-4"><p>semoga kita semua diberikan kesehatan dan perlindungan dari allah agar tetap dapat beraktifitas</p></div>
         </div>
       </div>
 
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
-          fill="#afccf7"
+          fill="#f7f0af"
           fill-opacity="100"
           d="M0,96L40,101.3C80,107,160,117,240,154.7C320,192,400,256,480,234.7C560,213,640,107,720,96C800,85,880,171,960,186.7C1040,203,1120,149,1200,149.3C1280,149,1360,203,1400,229.3L1440,256L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"
         ></path>
@@ -97,7 +97,7 @@
             <div class="card">
               <img src="img/Projects/2.jpg" class="card-img-top" alt="Project2" />
               <div class="card-body">
-                <p class="card-text">pernah mendedikasikan diri di bangku sekolah selama 12 tahun bahkan sekarang</p>
+                <p class="card-text">berwisata juga merupakan hal yang menarik</p>
               </div>
             </div>
           </div>
@@ -105,7 +105,7 @@
             <div class="card">
               <img src="img/Projects/3.jpg" class="card-img-top" alt="Project3" />
               <div class="card-body">
-                <p class="card-text"></p>
+                <p class="card-text">anak senja</p>
               </div>
             </div>
           </div>
@@ -113,7 +113,7 @@
             <div class="card">
               <img src="img/Projects/4.jpg" class="card-img-top" alt="Project4" />
               <div class="card-body">
-                <p class="card-text">senang berbagi</p>
+                <p class="card-text">cinta alam dan kasih sayang sesama manusia</p>
               </div>
             </div>
           </div>
@@ -121,7 +121,7 @@
             <div class="card">
               <img src="img/Projects/5.jpg" class="card-img-top" alt="Project5" />
               <div class="card-body">
-                <p class="card-text">bangga menjadi anak indonesia</p>
+                <p class="card-text">tidak lupa untuk shalat tepat waktu</p>
               </div>
             </div>
           </div>
@@ -178,7 +178,7 @@
 
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
-          fill="#afccf7"
+          fill="#f7f0af"
           fill-opacity="100"
           d="M0,256L40,224C80,192,160,128,240,90.7C320,53,400,43,480,64C560,85,640,139,720,154.7C800,171,880,149,960,154.7C1040,160,1120,192,1200,192C1280,192,1360,160,1400,144L1440,128L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"
         ></path>
@@ -187,8 +187,8 @@
     <!-- Akhir Contact -->
 
     <!-- Footer -->
-    <footer class="text-center pb-3" style="background-color: #afccf7">
-      <p>Created with <i class="bi bi-suit-heart-fill text-danger"></i> by <a href="https://unama.ac.id/" class="text-dark fw-bold">Farras Pandu Nugroho</a></p>
+    <footer class="text-center pb-3" style="background-color: #f7f0af">
+      <p>Created with <i class="bi bi-suit-heart-fill text-danger"></i> by <a href="https://unama.ac.id/" class="text-dark fw-bold">Muhammad Rizvi</a></p>
     </footer>
     <!-- Akhir Footer -->
 
